[iOS] WebCore fails to build with newer versions of clang https://bugs.webkit.org/show_bug.cgi?id=122161

Reviewed by Darin Adler.

* editing/FrameSelection.cpp: Add ENABLE(TEXT_CARET)-guard around shouldStopBlinkingDueToTypingCommand().
* page/EventHandler.cpp: Add !PLATFORM(IOS)-guard around constants cursorUpdateInterval and maximumCursorSize;
also add touch event/gesture event guard around shouldGesturesTriggerActive().
* platform/network/cf/ResourceResponseCFNet.cpp: Remove unused function filenameHasSaneExtension.
* platform/network/mac/ResourceResponseMac.mm: Only define static variables commonHeaderFields when building
without CFNetwork; also remove variable numCommonHeaderFields, instead use WTF_ARRAY_LENGTH(commonHeaderFields)
to compute the size of the fixed-sized array commonHeaderFields.

Canonical link: https://commits.webkit.org/140211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156715 268f45cc-cd09-0410-ab3c-d52691b4dbfc